istio/virtual_services_header/players-vs-header.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: players-vs-headers
spec:
  hosts:
    - players
  http:
    - match:
        - headers:
            x-version:
              exact: canary
      route:
        - destination:
            host: players
            subset: v2
    - route:
        - destination:
            host: players
            subset: v1
